--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@next/font": "^14.0.4",
+    "@vercel/analytics": "^1.1.2",
     "classnames": "^2.5.1",
     "lightgallery": "^2.7.2",
     "next": "14.0.4",
