--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-masonry-css": "^1.0.16"
+    "react-masonry-css": "^1.0.16",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
