--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-masonry-css": "^1.0.16",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
