--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@vercel/analytics": "^1.1.2",
     "classnames": "^2.5.1",
     "lightgallery": "^2.7.2",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-masonry-css": "^1.0.16",
     "tailwind-scrollbar-hide": "^1.1.7"
